# digitalmeve

./: .coveragerc  .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  MANIFEST.in  Makefile  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_CONTACTS.md  SUPPORT.md  SUPPORT.md pro,  meve-1.schema.json  nano fix.patch  pyproject.toml  render.yaml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: api.yml  auto-fix.yml  codeql.yml  publish.yml  quality.yml  release-drafter.yml  security.yml  smoke.yml  tests.yml
api/: app.py
docs/: API_USAGE.md  OFFICIAL.md  PRO.md  competitive.md  examples.md  faq.md  generator-guide.md  glossary.md  index.md  overview.md  roadmap.md  security.md  specification.md  verification-guide.md
docs/assets/: README.md
examples/: README.md  make_examples.sh  make_examples.sh.  verify_examples.sh.
examples/proofs/: .gitkeep
github/codeql/: codeql-config.yml
schema/: meve-1.schema.json
schemas/: meve-1.schema.json
src/digitalmeve/: __init__.py  cli.py  embedding_pdf.py  embedding_png.py  generator.py  pro_identity.py  utils.py  verifier.py
tests/: test_cli.py  test_embed_pdf.py  test_embedding_pdf_more.py  test_schema.py  test_version.py
website/: next.config.js  package.json  tsconfig.json
website/app/: globals.css  layout.tsx  page.tsx
