[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digitalmeve"
version = "1.7.1-dev"
description = "DigitalMeve library"
authors = [
  { name = "BACoul", email = "bacoul@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
