[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digitalmeve"
version = "1.7.1-dev"
description = "DigitalMeve library"
authors = [
  { name = "BACoul", email = "bacoul@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
# Pas de dépendances runtime pour l’instant
dependencies = []

[project.optional-dependencies]
# Pour le dev local et la CI (tests + validation de schéma)
dev = [
  "pytest>=7",
  "jsonschema>=4.0.0",
]
test = [
  "pytest>=7",
  "jsonschema>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
digitalmeve = "digitalmeve.cli:main"
digitalmeve-generate = "digitalmeve.cli:main_generate"
digitalmeve-verify = "digitalmeve.cli:main_verify"
